--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
 		          </div>
 		
 		          <div class="login-form">
-		          	<p><small style="color:#666">Enter a username to join. </small></p>
+		          	<p><small style="color: #cb5c2c">测试用户:{'admin','user','aaa'},password:{'password'}</small></p>
 		          	<form  method="post">
 			            <div class="form-group">
 			              <input type="text" class="form-control login-field" placeholder="Enter your name" name="username" />
